<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="32dp">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/setup_step_icon_desc"
        android:src="@drawable/ic_large_success"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_step_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/setup_done_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_step_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/setup_done_desc"
        android:textSize="16sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="7" />

</LinearLayout>
